# FBGEMM

./: .gitmodules  CMakeLists.txt  defs.bzl
bench/: BenchUtils.h  CMakeLists.txt  Depthwise3DBenchmark.cc  DepthwiseBenchmark.cc  EmbeddingSpMDM8BitBenchmark.cc  EmbeddingSpMDMBenchmark.cc  EmbeddingSpMDMNBitBenchmark.cc  EmbeddingSpMDMNBitRowWiseSparseBenchmark.cc  RowOffsetBenchmark.cc
include/fbgemm/: Fbgemm.h  FbgemmConvert.h  FbgemmFPCommon.h  FbgemmI8DepthwiseLasx.h  FbgemmPackMatrixB.h  FbgemmSparse.h  OutputProcessing-inl.h  PackingTraits-inl.h  QuantUtils.h  QuantUtilsLasx.h  Utils.h  UtilsLasx.h  spmmUtils.h  spmmUtilsLasx.h
src/: CodeGenHelpers.h  DirectConv.h  EmbeddingSpMDM.cc  EmbeddingSpMDMLasx.cc  EmbeddingSpMDMNBit.cc  ExecuteKernelU8S8.cc  Fbgemm.cc  FbgemmBfloat16Convert.cc  FbgemmBfloat16ConvertLasx.cc  FbgemmFP16.cc  FbgemmFP16UKernelsIntrinsicLasx.cc  FbgemmFP16UKernelsLasx.h  FbgemmFPCommon.cc  FbgemmFloat16Convert.cc  FbgemmFloat16ConvertLasx.cc  FbgemmI64.cc  FbgemmI8Depthwise2DLasx-inl.h  FbgemmI8Depthwise3DLasx.cc  FbgemmI8DepthwiseLasx-inl.h  FbgemmI8DepthwiseLasx.cc  FbgemmI8DepthwisePerChannelQuantLasx.cc  FbgemmI8Spmdm.cc  FbgemmSparseDense.cc  FbgemmSparseDenseInt8Lasx.cc  FbgemmSparseDenseLasx.cc  GenerateI8Depthwise.cc  GenerateKernel.cc  GenerateKernel.h  GenerateKernelDirectConvU8S8S32ACC32.cc  GenerateKernelU8S8S32ACC16.cc  GenerateKernelU8S8S32ACC32.cc  GroupwiseConv.cc  GroupwiseConv.h  GroupwiseConvAcc32Lasx.cc  MaskLasx.h  OptimizedKernelsLasx.cc  OptimizedKernelsLasx.h  PackAMatrix.cc  PackAWithIm2Col.cc  PackAWithQuantRowOffset.cc  (+17 more)
test/: CMakeLists.txt  EmbeddingSpMDMTest.cc  I8DepthwiseTest.cc  QuantUtilsTest.cc  RequantizeOnlyTest.cc  RowWiseSparseAdagradFusedTest.cc  SparseAdagradTest.cc
